2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property),
	(nwamui_daemon_handle_object_action_event):
	* common/nwamui_daemon.h:
	* daemon/status_icon.c (daemon_status_changed),
	(daemon_active_ncp_changed), (daemon_active_env_changed),
	(connect_nwam_object_signals), (daemon_status_is_good),
	(nwam_status_icon_run), (nwam_status_icon_finalize):
	Clean code, rework the gui daemon initial code.
	Uses nwamui_daemon_env_selection_set/is_manual code.

2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>

	reviewed by: <delete if not using a buddy>

	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property),
	(nwamui_daemon_handle_object_action_event):
	* common/nwamui_daemon.h:
	* daemon/status_icon.c (daemon_status_changed),
	(daemon_active_ncp_changed), (daemon_active_env_changed),
	(connect_nwam_object_signals), (daemon_status_is_good),
	(nwam_status_icon_run), (nwam_status_icon_finalize):

2009-08-11  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/nwam-env-item.c (nwam_env_item_init),
	(nwam_env_item_finalize), (on_nwam_env_notify),
	(prof_switch_loc_manually):
	Set sensitive according to gconf value, maybe change to daemon
	notify later.
	* daemon/nwam-menu.c (nwam_menu_real_insert), (menu_section_new),
	(nwam_menu_section_set_visible), (nwam_menu_section_set_sensitive):
	Remove maintanence of self visible and sensitive, it's hard to do.
	* daemon/nwam-menuitem.c (nwam_menu_item_toggle_size_request):
	Fix a build warning.
	* daemon/status_icon.c (prof_switch_loc_manually),
	(nwam_status_icon_run), (on_activate_static_menuitems),
	(nwam_status_icon_finalize), (nwam_menu_recreate_env_menuitems):
	Clean code. Fixed wireless menu is insensitive issue.

2009-08-10  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c, common/libnwamui.c: 
	  Fix bug#10302 (again) to allow for /N to specify the prefix. Also
	  fixes bug#10289.

2009-08-10  Darren Kenny  <darren.kenny@sun.com>
